--- a/cxm/src/components/user/about/style.scss
+++ b/cxm/src/components/user/about/style.scss
@@ -7,10 +7,17 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        img{
-            height: px2rem(92px);
-            display: inline-block;
-            vertical-align: middle;
+        // img{
+        //     height: px2rem(92px);
+        //     display: inline-block;
+        //     vertical-align: middle;
+        // }
+        span{
+            color: #dc3c32;
+            font-size: px2rem(34px);
+        }
+        span:first-of-type{
+            font-size: px2rem(64px);
         }
         i{
             font-style: normal;
