推广系统完成

--- a/cxm/src/components/activity/protomakemoeny/index/style.scss
+++ b/cxm/src/components/activity/protomakemoeny/index/style.scss
@@ -189,7 +189,7 @@
                             }
 
                             .el-progress-bar__inner {
-                                background-color: #FF7B23;
+                                background:linear-gradient(#ff7b23,#ffbf94);
                             }
                         }
                     }
@@ -320,7 +320,7 @@
                             }
 
                             .el-progress-bar__inner {
-                                background-color: #FF7B23;
+                                background: linear-gradient(#ff7b23,#ffbf94)
                             }
                         }
                     }
