推广系统bug修改完成

--- a/cxm/src/components/activity/protomakemoeny/erCode/style.scss
+++ b/cxm/src/components/activity/protomakemoeny/erCode/style.scss
@@ -20,15 +20,15 @@
             background: #fff;
             height: px2rem(64px);
             text-align: center;
-            line-height: px2rem(64px);
+            line-height: px2rem(90px);
             font-size: px2rem(32px);
             color: #323232;
         }
         .ed-b-c{
             background: #fff;
-            #qrcode{
-                width: px2rem(343px);
-                height: px2rem(343px);
+            .cd{
+                width: px2rem(243px);
+                height: px2rem(243px);
                 margin: 0 auto px2rem(22px);
             }
             .md-txt{
