--- a/cxm/static/activity/tg/style.css
+++ b/cxm/static/activity/tg/style.css
@@ -5,12 +5,28 @@
 
 html {
 	font-size: 20px;
+	background: #fecf92;
 }
 .page-current{
-	background: #FFE2D8;
+	background: #fecf92;
 }
+
+input:-webkit-autofill,select:-webkit-autofill {  
+    -webkit-box-shadow: 0 0 0px 1000px white  inset !important;  
+} 
+ 
+ 
 input{
-	outline: none;
+    outline-color: invert ;
+	outline-style: none ;
+	outline-width: 0px ;
+	border: none ;
+	border-style: none ;
+	text-shadow: none ;
+	-webkit-appearance: none ;
+	-webkit-user-select: text ;
+	outline-color: transparent ;
+	box-shadow: none;
 }
 
 img {
@@ -92,4 +108,8 @@ img {
 }
 .codebtn:disabled{
 	background: #ccc;
+}
+.left{
+	text-align: left;
+	font-size: 0.7rem;
 }
